commit	modified:   seashop/db.sqlite3 commit	new file:   seashop/static/css/address.css commit	modified:   seashop/static/css/style.css commit	new file:   seashop/store/migrations/0011_customer_first_name_customer_last_name.py commit	modified:   seashop/store/models/customer/cart.py commit	modified:   seashop/store/models/customer/customers.py commit	modified:   seashop/store/models/customer/invoicedetail.py commit	modified:   seashop/store/models/customer/invoices.py commit	modified:   seashop/store/templates/base.html commit	modified:   seashop/store/templates/customer/account.html commit	new file:   seashop/store/templates/customer/address.html commit	new file:   seashop/store/templates/customer/basecus.html commit	modified:   seashop/store/templates/customer/customer.html commit	new file:   seashop/store/templates/customer/invoices.html commit	modified:   seashop/store/urls.py commit	new file:   seashop/store/views/check/check_account.py commit	modified:   seashop/store/views/customer/customers.py commit	modified:   seashop/store/views/customer/login.py commit	new file:   seashop/store/views/customer/my_account/info_invoices.py commit	new file:   seashop/store/views/customer/my_account/update_account.py commit	modified:   seashop/store/views/customer/register.py

--- a/seashop/static/css/style.css
+++ b/seashop/static/css/style.css
@@ -1,6 +1,12 @@
 html::-webkit-scrollbar {
   display: block;
 }
+h1, h2, h3, h4, h5, h6 {
+    color: #252a2b;
+    margin: 0 0 13px 0;
+    font-weight: 500;
+    line-height: 1.2;
+}
 html::-webkit-scrollbar-thumb {
   border-radius: 10px;
   /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3); */
