commit	deleted:    seashop/db.sqlite3 commit	modified:   seashop/seashop/settings.py commit	modified:   seashop/static/css/address.css commit	new file:   seashop/static/css/cart.css commit	new file:   seashop/store/migrations/0012_rename_product_invoicedetail_product_detail.py commit	new file:   seashop/store/migrations/0013_remove_invoicedetail_product_detail_and_more.py commit	new file:   seashop/store/migrations/0014_addressdetail.py commit	new file:   seashop/store/models/customer/addressdetail.py commit	modified:   seashop/store/models/customer/customers.py commit	modified:   seashop/store/models/customer/invoicedetail.py commit	modified:   seashop/store/models/customer/invoices.py commit	modified:   seashop/store/models/products/product.py commit	modified:   seashop/store/models/products/productdetail.py commit	modified:   seashop/store/models/products/sizes.py commit	modified:   seashop/store/templates/base.html commit	modified:   seashop/store/templates/customer/account.html commit	modified:   seashop/store/templates/customer/address.html commit	modified:   seashop/store/templates/customer/basecus.html commit	modified:   seashop/store/templates/customer/cart.html commit	modified:   seashop/store/templates/customer/customer.html commit	new file:   seashop/store/templates/customer/edit_address.html commit	modified:   seashop/store/templates/customer/invoices.html commit	new file:   seashop/store/templates/customer/view_invoices.html commit	new file:   seashop/store/templatetags/address.py commit	modified:   seashop/store/templatetags/product.py commit	modified:   seashop/store/urls.py commit	modified:   seashop/store/views/customer/cart.py commit	modified:   seashop/store/views/customer/customers.py commit	new file:   seashop/store/views/customer/my_account/edit_address.py commit	renamed:    seashop/store/views/customer/my_account/info_invoices.py -> seashop/store/views/customer/my_account/invoices.py commit	new file:   seashop/store/views/customer/my_account/

--- a/seashop/store/templates/customer/basecus.html
+++ b/seashop/store/templates/customer/basecus.html
@@ -3,13 +3,9 @@
 <div id="article">
   <div class="container-fluid">
     <div class="row breadcrumb-shop">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pd5 blog-breadcrumb">
-        <ol class="breadcrumb breadcrumb-arrows">
-          <li><a href="">Trang chủ</a></li>
-          /
-          <li>Tài Khoản</li>
-        </ol>
-      </div>
+      {%block breadcrumb%}
+      
+      {%endblock%}
     </div>
     <br />
     <div class="content-page">
@@ -27,7 +23,7 @@
             <li
               class="woocommerce-MyAccount-navigation-link woocommerce-MyAccount-navigation-link--orders"
             >
-              <a href="invoice">Đơn hàng</a>
+              <a href="/customer/invoice">Đơn hàng</a>
             </li>
             <li
               class="woocommerce-MyAccount-navigation-link woocommerce-MyAccount-navigation-link--downloads"
@@ -37,12 +33,12 @@
             <li
               class="woocommerce-MyAccount-navigation-link woocommerce-MyAccount-navigation-link--edit-address"
             >
-              <a href="address">Địa chỉ</a>
+              <a href="/customer/address">Địa chỉ</a>
             </li>
             <li
               class="woocommerce-MyAccount-navigation-link woocommerce-MyAccount-navigation-link--edit-account"
             >
-              <a href="Update_account">Tài khoản</a>
+              <a href="/customer/Update_account">Tài khoản</a>
             </li>
             <li
               class="woocommerce-MyAccount-navigation-link woocommerce-MyAccount-navigation-link--customer-logout"
