--- a/seashop/static/css/address.css
+++ b/seashop/static/css/address.css
@@ -3,14 +3,14 @@
   float: left;
 }
 fieldset {
-    min-width: 0;
-    padding: 0;
-    margin: 0;
-    border: 0;
-  }
+  min-width: 0;
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
 .woocommerce-MyAccount-content {
   display: inline-block;
-  float: left;
+  /* float: left; */
   margin-left: 5%;
   width: 75%;
 }
@@ -46,7 +46,7 @@ fieldset {
   list-style-type: none;
   list-style: none;
 }
-address {
+.address {
   margin-bottom: 20px;
   font-style: normal;
   line-height: 1.42857143;
@@ -55,4 +55,166 @@ address {
 .woocommerce-page .col2-set .col-2 {
   float: right;
   width: 48%;
+}
+.woocommerce table.shop_table {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 0 -1px 24px 0;
+  text-align: left;
+  width: 100%;
+  border-collapse: separate;
+  border-radius: 5px;
+}
+
+.woocommerce table.shop_table tfoot td {
+  font-weight: 700;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.woocommerce table.shop_table tfoot th {
+  font-weight: 700;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.woocommerce table.shop_table td {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 9px 12px;
+  vertical-align: middle;
+  line-height: 1.5em;
+}
+
+.woocommerce-MyAccount-content h2 {
+  font-size: 25px;
+  text-align: center;
+  font-weight: 600;
+}
+#toc_container {
+  background: #f9f9f9;
+  border: 1px solid #aaa;
+  padding: 10px;
+  margin-bottom: 1em;
+  width: auto;
+  display: table;
+  font-size: 95%;
+}
+.woocommerce table.shop_table th {
+  font-weight: 700;
+  padding: 9px 12px;
+  line-height: 1.5em;
+}
+.woocommerce-order-details :last-child {
+  margin-bottom: 0;
+}
+.woocommerce .woocommerce-customer-details address {
+  font-style: normal;
+  margin-bottom: 0;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom-width: 2px;
+  border-right-width: 2px;
+  text-align: left;
+  width: 100%;
+  border-radius: 5px;
+  padding: 6px 12px;
+}
+.woocommerce-info,
+.woocommerce-message {
+  padding: 1em 2em 1em 3.5em;
+  margin: 0 0 2em;
+  position: relative;
+  background-color: #f7f6f7;
+  color: #515151;
+  border-top: 3px solid #a46497;
+  list-style: none outside;
+  width: auto;
+  word-wrap: break-word;
+}
+.woocommerce-info {
+  border-top-color: #1e85be;
+}
+.woocommerce-info::before,
+.woocommerce-message::before {
+  font-family: WooCommerce;
+  content: "\e028";
+  display: inline-block;
+  position: absolute;
+  top: 1em;
+  left: 1.5em;
+}
+.woocommerce .woocommerce-info .button,
+.woocommerce .woocommerce-message .button {
+  float: right;
+}
+.woocommerce-info::before,
+.woocommerce-message::before {
+  font-family: WooCommerce;
+  content: "\e028";
+  display: inline-block;
+  position: absolute;
+  top: 1em;
+  left: 1.5em;
+}
+.woocommerce-info::after,
+.woocommerce-message::after {
+  clear: both;
+}
+.woocommerce-info::after,
+.woocommerce-message::after {
+  content: " ";
+  display: table;
+}
+.woocommerce a.button {
+  font-size: 100%;
+  margin: 0;
+  line-height: 1;
+  cursor: pointer;
+  position: relative;
+  text-decoration: none;
+  overflow: visible;
+  padding: 0.618em 1em;
+  font-weight: 700;
+  border-radius: 3px;
+  left: auto;
+  color: #515151;
+  background-color: #ebe9eb;
+  border: 0;
+  display: inline-block;
+  background-image: none;
+  box-shadow: none;
+  text-shadow: none;
+}
+ .woocommerce button.button{
+    font-size: 100%;
+    margin: 0;
+    line-height: 1;
+    cursor: pointer;
+    position: relative;
+    text-decoration: none;
+    overflow: visible;
+    padding: 0.618em 1em;
+    font-weight: 700;
+    border-radius: 3px;
+    left: auto;
+    color: #515151;
+    background-color: #ebe9eb;
+    border: 0;
+    display: inline-block;
+    background-image: none;
+    box-shadow: none;
+    text-shadow: none;
+}
+.woocommerce form .form-row-first{
+    float: left;
+}
+.woocommerce form .form-row-last {
+    float: right;
+}
+.woocommerce form .form-row-first, .woocommerce form .form-row-last {
+    width: 47%;
+    overflow: visible;
+}
+.woocommerce form .form-row-wide {
+    clear: both;
+}
+address {
+    margin-bottom: 20px;
+    font-style: normal;
+    line-height: 1.42857143;
 }
