--- a/seashop/store/templates/base.html
+++ b/seashop/store/templates/base.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="header-wrap-icon">
-          <a {%if user%}href="customer/"{%else%}href="login"{%endif%}>
+          <a {%if user%}href="/customer/"{%else%}href="login"{%endif%}>
             <span class="account-menu icon-account" aria-hidden="true" title="Tài Khoản">
               <svg class="svg-account" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="510px" height="510px" viewBox="0 0 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve">
                 <g><g id="account-circle">
@@ -55,7 +55,7 @@
             </span>
           </a>
           <span id="site-cart-handle" class="icon-cart" aria-label="Open cart" title="Giỏ hàng">
-           <a {%if user%}href="cart"{%else%}href="login"{%endif%}>
+           <a {%if user%}href="/cart"{%else%}href="login"{%endif%}>
             <span class="cart-menu" aria-hidden="true">
               <svg version="1.1" class="svg-cart" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 24 27" style="enable-background:new 0 0 24 27;" xml:space="preserve">
                 <g>
@@ -78,7 +78,7 @@
         <button class="dropbtn"><a href="">Sản Phẩm</a>
           <i class="fa fa-caret-down"></i>
         </button>
-     
+    
         <div class="dropdown-content">
         
           <div class="row">
