--- a/seashop/store/templates/customer/account.html
+++ b/seashop/store/templates/customer/account.html
@@ -1,4 +1,4 @@
-{%extends 'customer/basecus.html'%}{%load static%}{%block MyAccount_content %}
+{%extends 'customer/basecus.html'%}{%block MyAccount_content %}
 
 <div class="woocommerce-MyAccount-content">
   <div class="woocommerce-notices-wrapper"></div>
@@ -130,4 +130,16 @@
   </form>
 </div>
 
+{%endblock%}
+
+{%block breadcrumb%}
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pd5 blog-breadcrumb">
+        <ol class="breadcrumb breadcrumb-arrows">
+          <li><a href="">Trang chủ</a></li>
+          /
+          <li>Tài Khoản</li>
+          /
+          <li>Tài Khoản</li>
+        </ol>
+      </div>
 {%endblock%}
