--- a/seashop/store/templates/customer/address.html
+++ b/seashop/store/templates/customer/address.html
@@ -1,4 +1,4 @@
-{%extends 'customer/basecus.html'%}{%load static%}{%block MyAccount_content %}
+{%extends 'customer/basecus.html'%}{%block MyAccount_content %}{%load address%}
 
 <div class="woocommerce-MyAccount-content">
   <div class="woocommerce-notices-wrapper"></div>
@@ -29,19 +29,40 @@
           </ul>
         </div>
         <h3><span id="Dia_chi_thanh_toan">Địa chỉ thanh toán</span></h3>
-        <a href="" class="edit">Thêm</a>
+        <a href="edit-address" class="edit">Thêm</a>
       </header>
       <address>Bạn vẫn chưa thêm địa chỉ nào.</address>
     </div>
-
+    {%if not addr%}
     <div class="u-column2 col-2 woocommerce-Address">
       <header class="woocommerce-Address-title title">
         <h3><span id="Dia_chi_giao_hang">Địa chỉ giao hàng</span></h3>
-        <a href="" class="edit">Thêm</a>
+        <a href="edit-address" class="edit">Thêm</a>
       </header>
       <address>Bạn vẫn chưa thêm địa chỉ nào.</address>
     </div>
+    {%else%}
+    <div class="u-column2 col-2 woocommerce-Address">
+      <header class="woocommerce-Address-title title">
+        <h3><span id="Dia_chi_giao_hang">Địa chỉ giao hàng</span></h3>
+        <a href="edit-address" class="edit">Sửa</a>
+      </header>
+      <address>{{addr|address}}</address>
+      
+    </div>
+    {%endif%}
   </div>
 </div>
 
 {% endblock %}
+{%block breadcrumb%}
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pd5 blog-breadcrumb">
+        <ol class="breadcrumb breadcrumb-arrows">
+          <li><a href="">Trang chủ</a></li>
+          /
+          <li>Đia chỉ</li>
+          /
+          <li>Địa chỉ</li>
+        </ol>
+      </div>
+{%endblock%}
