--- a/seashop/store/templates/customer/customer.html
+++ b/seashop/store/templates/customer/customer.html
@@ -17,3 +17,13 @@
 </div>
 
 {%endblock%}
+{%block breadcrumb%}
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pd5 blog-breadcrumb">
+        <ol class="breadcrumb breadcrumb-arrows">
+          <li><a href="">Trang chủ</a></li>
+          /
+          <li>Tài Khoản</li>
+
+        </ol>
+      </div>
+{%endblock%}
