commit	new file:   .idea/dataSources.local.xml commit	new file:   .idea/dataSources.xml commit	modified:   seashop/static/css/style.css commit	modified:   seashop/store/admin.py commit	new file:   seashop/store/migrations/0015_remove_invoice_date_remove_invoice_status_status.py commit	modified:   seashop/store/models/__init__.py commit	modified:   seashop/store/models/customer/invoicedetail.py commit	modified:   seashop/store/models/customer/invoices.py commit	new file:   seashop/store/models/customer/statusinvoice.py commit	modified:   seashop/store/models/products/product.py commit	modified:   seashop/store/templates/customer/invoices.html commit	modified:   seashop/store/templates/customer/view_invoices.html commit	modified:   seashop/store/templates/products/info.html commit	new file:   seashop/store/templatetags/invoices.py commit	modified:   seashop/store/views/customer/my_account/invoices.py commit	modified:   seashop/store/views/customer/my_account/view_invoice.py commit

--- a/seashop/store/templates/customer/view_invoices.html
+++ b/seashop/store/templates/customer/view_invoices.html
@@ -1,12 +1,12 @@
-{%extends 'customer/basecus.html'%}{%load static%}{%block MyAccount_content%}{%load product%}
+{%extends 'customer/basecus.html'%}{%load static%}{%block MyAccount_content%}{%load invoices%}
 <link rel="stylesheet" href="{%static 'css/address.css'%} " />
 
 <div class="woocommerce-MyAccount-content">
   <div class="woocommerce-notices-wrapper"></div>
   <p>
     Đơn hàng #<mark class="order-number">{{id}}</mark> đã được đặt lúc
-    <mark class="order-date">17 Tháng Mười Một, 2022</mark> và hiện tại là
-    <mark class="order-status">{{inv.status}}</mark>.
+    <mark class="order-date">{{st.date|date_invoice}}</mark> và hiện tại là
+    <mark class="order-status">{{st.status|status}}</mark>.
   </p>
 
   <section class="woocommerce-order-details">
