--- a/seashop/store/templates/customer/invoices.html
+++ b/seashop/store/templates/customer/invoices.html
@@ -1,4 +1,4 @@
-{%extends 'customer/basecus.html'%}{%load static%}{%block MyAccount_content%}{%load product%}
+{%extends 'customer/basecus.html'%}{%load static%}{%block MyAccount_content%}{%load invoices%}
 
 <div class="woocommerce-MyAccount-content">
   <div class="woocommerce-notices-wrapper"></div>
@@ -43,17 +43,17 @@
         <td
           class="woocommerce-orders-table__cell woocommerce-orders-table__cell-order-number"
         >
-          <a href="/"> #{{x.invoice}} </a>
+          <a href="view_invoice/{{x.invd_id}}"> #{{x.invoice}} </a>
         </td>
         <td
           class="woocommerce-orders-table__cell woocommerce-orders-table__cell-order-date"
         >
-          <time datetime="2022-11-17T13:08:27+00:00">{{x.date}}</time>
+          <time datetime="{{x.date}}">{{x.date}}</time>
         </td>
         <td
           class="woocommerce-orders-table__cell woocommerce-orders-table__cell-order-status"
         >
-          {{x.status}}
+          {{x.status|status}}
         </td>
         <td
           class="woocommerce-orders-table__cell woocommerce-orders-table__cell-order-total"
