--- a/seashop/store/templates/customer/basecus.html
+++ b/seashop/store/templates/customer/basecus.html
@@ -4,12 +4,14 @@
   <div class="container-fluid">
     <div class="row breadcrumb-shop">
       {%block breadcrumb%}
-      
+     
       {%endblock%}
     </div>
     <br />
     <div class="content-page">
       <div class="woocommerce">
+        {%block erro%}
+        {%endblock%}
         <nav
           class="woocommerce-MyAccount-navigation"
           style="width: 20%; float: left"
